--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "playnine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://christgood.github.io/reactjs/playnine",
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "^15.6.1",
